--- a/src/app/todos/todo-item/todo-item.component.html
+++ b/src/app/todos/todo-item/todo-item.component.html
@@ -1,1 +1,8 @@
-<p>todo-item works!</p>
+<li>
+  <div class="view">
+    <input class="toggle" type="checkbox">
+    <label>Comprar Unicornio</label>
+    <button class="destroy"></button>
+  </div>
+  <input class="edit" value="Rule the web">
+</li>
