--- a/src/app/todos/todo-list/todo-list.component.html
+++ b/src/app/todos/todo-list/todo-list.component.html
@@ -1,1 +1,9 @@
-<p>todo-list works!</p>
+<section class="main">
+  <input id="toggle-all" class="toggle-all" type="checkbox">
+  <label for="toggle-all">Marcar todo como completado</label>
+  <ul class="todo-list">
+
+    <app-todo-item></app-todo-item>
+
+  </ul>
+</section>
