--- a/src/app/todos/todo-page/todo-page.component.html
+++ b/src/app/todos/todo-page/todo-page.component.html
@@ -1,1 +1,9 @@
-<p>todo-page works!</p>
+<section class="todoapp">
+
+  <app-todo-add></app-todo-add>
+
+  <app-todo-list></app-todo-list>
+
+  <app-todo-footer></app-todo-footer>
+
+</section>
