--- a/src/app/todos/todo-item/todo-item.component.html
+++ b/src/app/todos/todo-item/todo-item.component.html
@@ -1,4 +1,7 @@
 <li>
+
+  <!-- view, edit, completed  -->
+
   <div class="view">
     <input class="toggle" type="checkbox">
     <label>Comprar Unicornio</label>
