--- a/src/app/todos/todo-page/todo-page.component.html
+++ b/src/app/todos/todo-page/todo-page.component.html
@@ -2,7 +2,13 @@
 
   <app-todo-add></app-todo-add>
 
-  <app-todo-list></app-todo-list>
+  <section class="main">
+    <input id="toggle-all" class="toggle-all" type="checkbox">
+    <label for="toggle-all">Marcar todo como completado</label>
+
+    <app-todo-list></app-todo-list>
+
+  </section>
 
   <app-todo-footer></app-todo-footer>
 
