--- a/src/app/todos/todo-footer/todo-footer.component.html
+++ b/src/app/todos/todo-footer/todo-footer.component.html
@@ -1,10 +1,10 @@
 <footer class="footer">
   <!-- This should be `0 items left` by default -->
-  <span class="todo-count"><strong>0</strong> items</span>
+  <span class="todo-count"><strong>0</strong> tareas pendientes</span>
   <!-- Remove this if you don't implement routing -->
   <ul class="filters">
     <li>
-      <a class="selected" href="#/">Todo</a>
+      <a class="selected" href="#/">Todas</a>
     </li>
     <li>
       <a href="#/active">Activos</a>
