--- a/src/app/todos/todo-item/todo-item.component.html
+++ b/src/app/todos/todo-item/todo-item.component.html
@@ -19,6 +19,7 @@
     type="text"
     [formControl]="txtInput"
     #inputFisico
-    (blur)="terminarEdicion()">
+    (blur)="terminarEdicion()"
+    (keyup.enter)="terminarEdicion()">
 
 </li>
