ngrx - filtro y uso de 2 reducer

--- a/src/app/todos/todo-page/todo-page.component.html
+++ b/src/app/todos/todo-page/todo-page.component.html
@@ -3,7 +3,13 @@
   <app-todo-add></app-todo-add>
 
   <section class="main">
-    <input id="toggle-all" class="toggle-all" type="checkbox">
+
+    <input
+      id="toggle-all"
+      class="toggle-all"
+      type="checkbox"
+      (click)="toggleAll()">
+
     <label for="toggle-all">Marcar todo como completado</label>
 
     <app-todo-list></app-todo-list>
