--- a/src/app/todos/todo-footer/todo-footer.component.html
+++ b/src/app/todos/todo-footer/todo-footer.component.html
@@ -10,5 +10,5 @@
 
   </ul>
 
-  <button class="clear-completed">Limpiar completados</button>
+  <button class="clear-completed" (click)="limpiarCompletados()">Limpiar completados</button>
 </footer>
